# docs/swagger.yaml
@@ -16,6 +16,41 @@ definitions:
     - role
     - telegram_id
     type: object
+  meetings.CreateMeetingInput:
+    properties:
+      date:
+        description: Формат "YYYY-MM-DD"
+        type: string
+      end_time:
+        description: Формат "HH:MM"
+        type: string
+      meeting_type:
+        description: '"online" или "offline"'
+        type: string
+      room:
+        description: Обязательное для офлайн встреч
+        type: string
+      start_time:
+        description: Формат "HH:MM"
+        type: string
+      title:
+        type: string
+    required:
+    - date
+    - end_time
+    - meeting_type
+    - start_time
+    - title
+    type: object
+  meetings.TimeSlot:
+    properties:
+      end:
+        description: Например, "13:20"
+        type: string
+      start:
+        description: Например, "12:00"
+        type: string
+    type: object
   response.ErrorCodeResponse:
     properties:
       code:
@@ -26,6 +61,33 @@ definitions:
   response.ErrorResponse:
     properties:
       error:
+        type: string
+    type: object
+  response.MeetingResponse:
+    properties:
+      conference_link:
+        type: string
+      created_at:
+        type: string
+      created_by:
+        type: integer
+      date:
+        type: string
+      end_time:
+        type: string
+      id:
+        type: integer
+      meeting_type:
+        type: string
+      room:
+        type: string
+      start_time:
+        type: string
+      team_id:
+        type: integer
+      title:
+        type: string
+      updated_at:
         type: string
     type: object
   response.SuccessResponse:
@@ -40,6 +102,15 @@ definitions:
       invitelink:
         type: string
       name:
+        type: string
+    type: object
+  response.UserInfoResponse:
+    properties:
+      name:
+        type: string
+      role:
+        type: string
+      team_name:
         type: string
     type: object
   response.UserResponse:
@@ -135,7 +206,131 @@ paths:
       summary: Регистрация пользователя
       tags:
       - auth
+  /meetings:
+    post:
+      consumes:
+      - application/json
+      description: Создает новую встречу для команды. Доступно только для менеджеров.
+      parameters:
+      - description: Уникальный идентификатор Telegram
+        in: query
+        name: telegram_id
+        required: true
+        type: string
+      - description: Данные встречи
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/meetings.CreateMeetingInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Информация о созданной встрече
+          schema:
+            $ref: '#/definitions/response.MeetingResponse'
+        "400":
+          description: Ошибка валидации или некорректные данные
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Пользователь не найден
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "403":
+          description: Доступ запрещен (не менеджер)
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "409":
+          description: Конфликт по времени и аудитории
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Создание встречи
+      tags:
+      - meetings
+  /meetings/available-slots:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает список доступных временных слотов для указанной аудитории
+        на выбранную дату
+      parameters:
+      - description: Номер аудитории
+        in: query
+        name: room
+        required: true
+        type: string
+      - description: Дата в формате YYYY-MM-DD
+        in: query
+        name: date
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Список доступных временных слотов
+          schema:
+            items:
+              items:
+                $ref: '#/definitions/meetings.TimeSlot'
+              type: array
+            type: array
+        "400":
+          description: Отсутствуют обязательные параметры или неверный формат
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Ошибка при получении данных
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Получение доступных временных слотов
+      tags:
+      - meetings
   /team:
+    delete:
+      consumes:
+      - application/json
+      description: Удаляет команду и очищает связи со всеми участниками. Доступно
+        только для владельца команды.
+      parameters:
+      - description: Уникальный идентификатор Telegram
+        in: query
+        name: telegram_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Команда успешно удалена
+          schema:
+            $ref: '#/definitions/response.SuccessResponse'
+        "400":
+          description: Отсутствует telegram_id
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Пользователь не найден
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "403":
+          description: 'Error: Только руководитель может удалить команду Code: ONLY_MANAGER_DELETE_TEAM,
+            Error: Вы не являетесь владельцем команды Code: NOT_OWNER_OF_TEAM'
+          schema:
+            $ref: '#/definitions/response.ErrorCodeResponse'
+        "500":
+          description: Ошибка при удалении команды
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Удаление команды
+      tags:
+      - team
     post:
       consumes:
       - application/json
@@ -420,4 +615,37 @@ paths:
       summary: Получение информации о своей команде
       tags:
       - team
+  /user:
+    get:
+      consumes:
+      - application/json
+      description: Получает информацию о пользователе по его Telegram ID.
+      parameters:
+      - description: Telegram ID of the user
+        in: query
+        name: telegram_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Информация о пользователе
+          schema:
+            $ref: '#/definitions/response.UserInfoResponse'
+        "400":
+          description: Ошибка валидации или отсутствует telegram_id
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Пользователь не найден
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Ошибка создания команды
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Получение информации о пользователе
+      tags:
+      - users
 swagger: "2.0"
